# Stock

./: .gitignore  pyproject.toml  requirements.txt  stock_counter_industry.json  stock_list_industry.json
src/: Dockerfile  auth.json  auth.py  auto_fetch_log.json  config.py  docker-compose.yaml  main.py  polars_utils.py  requirements.txt  stock.py  user_preferences.json
src/data/: StockCounter.csv  StockList.csv
