[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyinstaller>=6.15.0",
    "pyquery>=2.0.1",
    "requests>=2.32.4",
    "requests-html>=0.10.0",
    "seaborn>=0.13.2",
    "streamlit>=1.48.0",
    "twstock>=1.4.0",
    "yahoo-fin>=0.8.9.1",
    "yfinance>=0.2.65",
]
